--- a/readme.html
+++ b/readme.html
@@ -570,8 +570,8 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <LI><B>Likelihoods</B>
 <UL>
 <LI>Support for the Planck likelihood
-<LI>Added SNLS supernovae and updated Union to Union 2.1
-<LI>BAO data up dated to BOSS DR9 <A HREF="http://www.sdss3.org/science/boss_dr9_final_results/">final results</A> (DR7, DR9 and 6DF). Note the code is not identical, cosmomc computes the drag sound horizon numerically (recalibrated to be consistent in the fiducial model); also be aware of correlation with Wigglez.
+<LI>Added SNLS supernovae (with option for internal marginalization) and updated Union to Union 2.1
+<LI>BAO data up dated to BOSS DR9 <A HREF="http://www.sdss3.org/science/boss_publications.php">final results</A> (DR7, DR9 and 6DF). Note the code is not identical, cosmomc computes the drag sound horizon numerically (recalibrated to be consistent in the fiducial model); also be aware of correlation with Wigglez.
 <LI>HST data updated to Riess et al: 1103.2976 (from BOSS mod)
 <LI>Updated for WMAP9 (edit the Makefile in your wmap_likelihood_v5 directory appropriately first).
 <LI>Input parameters use_WMAP_TT_beam_ptsrc, use_WMAP_TE, use_WMAP_TT that can all be set to false to use only WMAP low L
