--- a/readme.html
+++ b/readme.html
@@ -523,6 +523,10 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>June 2013</B><BR>
+<LI>Fix getdist bounds outputs when plot_params is set, triangle plot data generation
+<LI>Fix for cosmomc runs with no covmat; more robust checkpoint file output
+</UL>
 <LI><B>April 2013</B><BR>
 <UL>
 <LI>[23 April] fix to work with default test_likelihood parameter (F)
