--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>April 2013</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>June 2013</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -524,7 +524,8 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 
 <UL>
 <LI><B>June 2013</B><BR>
-<LI>Fix getdist bounds outputs when plot_params is set, triangle plot data generation
+<UL>
+<LI>Fix getdist bounds outputs when plot_params is set and triangle plot data generation
 <LI>Fix for cosmomc runs with no covmat; more robust checkpoint file output
 </UL>
 <LI><B>April 2013</B><BR>
