--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>April 2013</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>June 2013</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -499,8 +499,10 @@ weighting function or parameter mapping.</ul>
 
 <A NAME="Addons"><h2>Add-ons and extra datasets</h2></A>
 Many old add-ons are unlikely to work with this version of CosmoMC. I will add ones here if and when they are updated.
-<!--
 <UL>
+<LI><A HREF="http://lakme.lbl.gov/~sheejong/cosmomcDR8/">SDSS DR8</a> BAO data
+</UL>
+<!--
 <LI><A HREF="http://www.utdallas.edu/~jdossett/isitgr/">Integrated Software in Testing General Relativity</a>
 <LI><A HREF="http://www.nhn.ou.edu/~wang/SNcode/index.html">Yun Wang's Supernova Flux-averaging Likelihood Code</a>
 <LI><A HREF="http://www.esnested.info">Evolutionary Strategies for Cosmology</a> (nested sampling)
@@ -521,8 +523,14 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>June 2013</B><BR>
+<UL>
+<LI>Fix getdist bounds outputs when plot_params is set and triangle plot data generation
+<LI>Fix for cosmomc runs with no covmat; more robust checkpoint file output
+</UL>
 <LI><B>April 2013</B><BR>
 <UL>
+<LI>[23 April] fix to work with default test_likelihood parameter (F)
 <LI>Automatic thinning by <b>oversample_fast</b> factor for sampling_method=1 (prevents files getting very large)
 <LI><b>oversample_fast</b> meaning slightly changed to give more regular fast updates in standard sampling, and generate <b>oversample_fast</b> standard fast metropolis samples per slow update in the dragging method.
 <LI>Tweaks to various internal convergence and update parameters
