--- a/camb/readme.html
+++ b/camb/readme.html
@@ -115,6 +115,7 @@ where all quantities are in the synchronous gauge and evaluated at the requested
 
 <B>xx 2013</B><BR>
 <UL>
+<LI>Modified more general neutrino mass input specification: <B>share_delta_neff</B> and <B>massive_neutrinos</b> now integer array. See section X of the <A HREF="http://cosmologist.info/notes/CAMB.pdf">CAMB notes</A> for detailed documentation and examples.
 <LI>Replaced numerical recipes functions with internal fortran or new versions (thanks Martin Reinecke)
 <LI>Fixed memory issue for CosmoMC compatibility
 </UL>
