update planck readme

--- a/readme_planck_internal.html
+++ b/readme_planck_internal.html
@@ -15,8 +15,10 @@ A set of .ini files are supplied in ./batch1 which set up standard for Planck ru
 <p>
 <H3>Branches</H3>
 <UL>
+<LI><b>master</b> is the latest tested stable version; CAMB updated since 2013 first grid results
 <LI><b>final_nominal</b> is the code used for 2013 first papers
-<LI><b>cosmomc_public</b> is the corresponding public version
+<LI><b>final_nominal_updated</b> is above with various bug fixes, using CAMB March 2013b as original papers
+<LI><b>cosmomc_public</b> is the current public version
 <LI><b>camspec_wiggle</b> has some camspec likelihood variations etc used for tests
 <LI><b>tmp_cl_dump</b> has hack to dump C_l when postprocessing (for rainbow plots)
 </UL>
