--- a/readme.html
+++ b/readme.html
@@ -527,7 +527,8 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <LI><B>October 2013</B><BR>
 <UL>
 <LI>CAMB updated to October 2013 version  (inc. Jason Dossett changes to support non-linear lensing and non-linear MPK, changing numerical results slightly; fix for ppf bug that significantly changes results at low L for w&gt;&gt;-0.8, thanks David Rapetti and Matteo Cataneo)
-<LI>Added WiggleZ and MPK modules, and corresponding changes (Jason Dossett)
+<LI>Added WiggleZ and MPK modules, and corresponding general changes for likelihoods using the linear or non-linear matter power spectrum as a function of redshift. Double interpolation is now avoided, and combinations of requirements for different likelihoods are automatically internally combined. (All thanks to Jason Dossett)
+<LI>Added halofit_ppf (Jason Dossett)
 <LI>Minimization now has more options, including high-temperature MCMC check, and uses existing .covmat for widths: best fits seems to be a lot more stable now; also MPI support to compare result from multiple minimizations (not usually required)
 <LI>Added checkConflicts to likelihood class (so new likelihoods can check full list for conflicts and abort if necessary e.g. BAO/MPK) and added .dataset file-based likelihood ancestor class, with conflict specification input parameters
 <LI>New python plotting options and Planck default settings; sample Planck output scripts updated
