batch2 with 65F likelihood settings

--- a/readme_planck_internal.html
+++ b/readme_planck_internal.html
@@ -21,5 +21,7 @@ A set of .ini files are supplied in ./batch1 which set up standard for Planck ru
 <LI><b>cosmomc_public</b> is the current public version
 <LI><b>camspec_wiggle</b> has some camspec likelihood variations etc used for tests
 <LI><b>tmp_cl_dump</b> has hack to dump C_l when postprocessing (for rainbow plots)
+<LI><b>final_nominal</b> is the code used for 2013 first papers
+<LI><b>v65F_grid</b> full mission temperature grid (batch2)
 </UL>
 </body></center> 
