--- a/readme_planck_internal.html
+++ b/readme_planck_internal.html
@@ -24,4 +24,13 @@ A set of .ini files are supplied in ./batch1 which set up standard for Planck ru
 <LI><b>final_nominal</b> is the code used for 2013 first papers
 <LI><b>v65F_grid</b> full mission temperature grid (batch2)
 </UL>
+<H3>Changes since public nominal mission release</H3>
+<UL>
+<LI>Support for derived parameters from each likelihood function
+<LI>Support for best-fit data output for each likelihood
+<LI>CamSpec refactored; foreground model .camspec_foreground file output along with .bestfit_cl
+<LI>CamSpec derived parameters (total foreground amplitudes at L=2000)
+<LI>added camspec_make.ini for making beam-marged; use of .bestfit_cl and .camspec_foreground for fiducial model
+</UL>
+
 </body></center> 
