--- a/readme_planck_internal.html
+++ b/readme_planck_internal.html
@@ -31,6 +31,7 @@ A set of .ini files are supplied in ./batch1 which set up standard for Planck ru
 <LI>CamSpec refactored; foreground model .camspec_foreground file output along with .bestfit_cl
 <LI>CamSpec derived parameters (total foreground amplitudes at L=2000)
 <LI>added camspec_make.ini for making beam-marged; use of .bestfit_cl and .camspec_foreground for fiducial model
+<LI>removed _marge_mode marged like file (can easily be calculated on the fly)
 </UL>
 
 </body></center> 
