CAMB update to Nov 2013

--- a/readme.html
+++ b/readme.html
@@ -523,6 +523,10 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>November 2013</B><BR>
+<UL>
+<LI>CAMB updated to November 2013 version (fixes problem with e.g. tensor runs)
+</UL>
 
 <LI><B>October 2013</B><BR>
 <UL>
