Antony fixes for generic sampler and un-named parameter support

--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>December 2013</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>January 2014</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -523,10 +523,13 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
-<LI><B>xxx 2013</B><BR>
+<LI><B>xxx 2014</B><BR>
 <UL>
 <LI>Added DR11 BAO module changes and data from <A HREF="http://www.sdss3.org/science/boss_publications.php">SDSS</A>
+<LI>Functioning support for using CosmoMC as a generic sampler
+<LI>MatterPowerAt_Z interpolation bug fix 
 </UL>
+
 
 <LI><B>December 2013</B><BR>
 <UL>
