--- a/camb/readme.html
+++ b/camb/readme.html
@@ -45,6 +45,9 @@ edit the supplied Makefile, see below)
 <P>
 The Makefile comes set up for Intel machines using Intel's ifort compiler. Just comment the relevant parts to compile on different systems. If you have Intel's Visual Fortran you can use the projects in the VisualStudio folder, no need to use the Makefile. To run on multi-processor machines add the -openmp (or equivalent) option to the Makefile's FFLAGS parameter to compile a parallelized (OPENMP) version.
 </P>
+<P>
+Martina Schwind has kindly contributed some <A hREF="Work_with_CAMB_V13_for_AL.pdf">introductory slides</A> with details of program running and internal structure. For some further technical details about the algorithms, equations and code see the <A HREF="http://cosmologist.info/notes/CAMB.pdf">CAMB notes</A>.
+</P>
 <A NAME="inputs">
 <H3>Input parameters</H3>
 <P>
@@ -123,6 +126,11 @@ Some details about what different source code files do are given <A HREF="#FILES
 <P>
 <A NAME="version">
 <H3>Version history</H3>
+<B>February 2014</B><BR>
+<UL>
+<LI>Modified massive neutrino halofit parameters to be more accurate with the new halofit from Takahashi 2012 (thanks to Simeon Bird).
+</UL>
+
 <B>December 2013</B><BR>
 <UL>
 <LI>Minor fix so to set NLL_num_redshifts=0 by default so transfer functions don't have to always be integrated down to z=0
