--- a/readme.html
+++ b/readme.html
@@ -428,11 +428,11 @@ Likelihoods that you use may also have their own nuisance parameters.
 <A NAME="Generic"><h2>Using CosmoMC as a generic sampler</h2></A>
 You can use CosmoMC to sample any custom function that you want to provide. To do this
 <UL>
-<LI>Write your own likelihood in GenericLikelihoodFunction in calclike.f90 
+<LI>Write your own likelihood in GenericLikelihoodFunction in calclike.f90
 <LI>Adapt params_generic.ini appropriately for your parameter numbers and settings (see comments there)
 <LI>Run using your .ini file as normal
 </UL>
-You can use named or un-named parameters. Making your own .paramnames file to name your parameters usually makes things easier (except possibly if you have a very large number of parameters where number labels make sense). 
+You can use named or un-named parameters. Making your own .paramnames file to name your parameters usually makes things easier (except possibly if you have a very large number of parameters where number labels make sense).
 
 <A NAME="Programming"><h2>Programming</h2></A>
 <!--
@@ -536,9 +536,13 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <UL>
 <LI><B>xxx 2014</B><BR>
 <UL>
+<LI>Major restructuring of main code using Fortran 2008: structure supports additional cosmology calculator codes, etc.
 <LI>Added DR11 BAO module changes and data from <A HREF="http://www.sdss3.org/science/boss_publications.php">SDSS</A>
 <LI>Functioning support for using CosmoMC as a generic sampler
 <LI>MatterPowerAt_Z interpolation bug fix
+<LI>.likestats files include mean likelihood numbers; python tables updated accordingly
+<LI>python/runMPI.py added to replace perl scripts; based on a templated queue submission script, e.g. provided job_script.
+<LI>python makeGrid settings: lists of .ini files can now be, or include, python dictionaries of parameters rather than .ini files; job data_set can be a dataSet() item
 </UL>
 
 
