--- a/readme.html
+++ b/readme.html
@@ -546,6 +546,7 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <LI>.likestats files include mean likelihood numbers; python tables updated accordingly
 <LI>python/runMPI.py added to replace perl scripts; based on a templated queue submission script, e.g. provided job_script.
 <LI>python makeGrid settings: lists of .ini files can now be, or include, python dictionaries of parameters rather than .ini files; job data_set can be a dataSet() item
+<LI>CAMB update: updated halofit fitting parameters for neutrino models (thanks Simeon Bird)
 </UL>
 
 
