--- a/readme.html
+++ b/readme.html
@@ -509,10 +509,11 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <UL>
 <LI>Major restructuring of main code using Fortran 2008: structure supports additional cosmology calculator codes, etc. Use ifort 14+.
 <LI>Re-written CMB likelihoods; new CMBlikes module replaces the (mis-named) Planck_like, with support for exact forecasting and binned HL likelihoods (e.g. <A HREF="http://bicepkeck.org/">BICEP2</A>); runtime determination of L-ranges and fields needed. (.data format changed); old CMB data format support removed for now.
-<LI>Added <A HREF="http://bicepkeck.org/">BICEP2</A> data likelihood files (in ./data/BICEP/)    
+<LI>Added <A HREF="http://bicepkeck.org/">BICEP2</A> data likelihood files (in ./data/BICEP/)
 <LI>New JLA supernovae likelihood module (<a href="http://arxiv.org/abs/1401.4064">arXiv:1401.4064</A>)
 <LI>Added DR11 BAO module changes and data from <A HREF="http://www.sdss3.org/science/boss_publications.php">SDSS</A>
 <LI>Mpk functions now use 2D bicupic interpolation (thanks Jason Dossett)
+<LI>Added <b>sterile_mphys_max</b> parameter to set prior on maximum physical mass (in eV) of a thermal massive sterile neutrino, 10eV by default.
 <LI>MatterPowerAt_Z interpolation bug fix
 <LI>.likestats files include mean likelihood numbers; python tables updated accordingly
 <LI>python/runMPI.py added to replace perl scripts; based on a templated queue submission script, e.g. provided job_script.
